arkts_static_test/05_Generics/ets_cases/5.1.4_Wildcard_Type/compile-fail/GEN_05_01_04_102_FAIL_POS.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id GEN_05_01_04_102_FAIL_POS
 * @expect compile-fail
 * @section 5.1.4
 * @design 通配符写入 in-position（T 实例化为 never）
 * @note 反向用例：验证 invariant T 在 in-position 写入编译错误（spec 5.1.4 行 487）
 */
class C {}
interface X<T extends C> {
    read(): T;
    write(p: T): void;
    prop: T;
}
function foo(o: Object): void {
    if (o instanceof X) {
        o.write(new C());  // Compile-time error: T in "in" position instantiated with never
    }
}
